--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="asset/css/common.css">
+    <link rel="stylesheet" href="../asset/css/common.css">
 </head>
 <body>
 <div class="asdasd">
