--- a/html/index.html
+++ b/html/index.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../asset/css/common.css">
+    <link rel="stylesheet" href="/asset/css/style.css">
+    <script src="/asset/js/jquery-3.4.1.min.js"></script>
+    <script src="/asset/js/jquery.mCustomScrollbar.min.js"></script>
+    <script src="/asset/js/jquery.mousewheel-3.0.6.min.js"></script>
 </head>
 <body>
-<div class="asdasd">
-    <div>1</div>
-    <div>2</div>
-    <div>3</div>
-    <div>4</div>
-</div>
 
 </body>
 </html>
