--- a/html/complete_examples.html
+++ b/html/complete_examples.html
@@ -221,8 +221,8 @@
 	
 	<!-- Google CDN jQuery with fallback to local -->
 	<!-- custom scrollbar plugin -->
-	<script src="../asset/js/jquery-3.4.1.min.js"></script>
-	<script src="../asset/js/jquery.mCustomScrollbar.min.js"></script>
+	<script src="../asset/js/lib/jquery-3.4.1.min.js"></script>
+	<script src="../asset/js/lib/jquery.mCustomScrollbar.min.js"></script>
 
 	<script>
 		(function($){
