--- a/html/guide.html
+++ b/html/guide.html
@@ -13,14 +13,19 @@
 <body>
 <h2 class="guideTitle">button</h2>
 <div class="guideContent">
+    <h3 class="inTitle">기본형</h3>
     <a href="#" class="btnText fillRed"><span>확인1111</span></a>
     <a href="#" class="btnText"><span>설정 초기화</span></a>
-    <a href="#" class="btnText fillGray"><span>출력</span></a>
+    <h3 class="inTitle">sizeSmall</h3>
     <a href="#" class="btnText sizeSmall"><span>자세히보기</span></a>
+    <h3 class="inTitle">sizeMiddle</h3>
+    <a href="#" class="btnText sizeMiddle fillGray"><span>출력</span></a>
+    <h3 class="inTitle">sizeBig</h3>
     <a href="#" class="btnText sizeBig fillGray"><span>미리보기</span></a>
     <a href="#" class="btnText sizeBig fillRed"><span>출력하기</span></a>
-    <a href="#" class="btnClose fillGray"><span>닫기</span></a>
+    <h3 class="inTitle">btnClose</h3>
     <a href="#" class="btnClose"><span>닫기</span></a>
+    <a href="#" class="btnClose white"><span>닫기</span></a>
 </div>
 </body>
 </html>
