고객리스트

--- a/html/list.html
+++ b/html/list.html
@@ -40,7 +40,7 @@
                     <div class="td"><div class="iconCircle"><span class="like">즐겨찾기</span></div></div>
                     <div class="td"><div class="iconCircle"><span class="analysis">보장분석</span></div></div>
                     <div class="td"><div class="iconCircle"><span class="agree">동의여부</span></div></div>
-                    <div class="td attend"><button type="button" class="btnPrint"><span>출력</span></button></div>
+                    <div class="td attend"><a href="#" class="btnText sizeMiddle fillGray"><span>출력</span></a></div>
                 </div>
             </div>
             <div class="item">
@@ -55,7 +55,7 @@
                     <div class="td"><div class="iconCircle"><span class="like">즐겨찾기</span></div></div>
                     <div class="td"><div class="iconCircle"><span class="analysis">보장분석</span></div></div>
                     <div class="td"><div class="iconCircle"><span class="agree">동의여부</span></div></div>
-                    <div class="td attend"><button type="button" class="btnPrint"><span>출력</span></button></div>
+                    <div class="td attend"><a href="#" class="btnText sizeMiddle fillGray"><span>출력</span></a></div>
                 </div>
             </div>
         </div>
