--- a/html/list.html
+++ b/html/list.html
@@ -37,24 +37,54 @@
                     <div class="td">11-30</div>
                     <div class="td">D-30</div>
                     <div class="td date">2019.10.14</div>
-                    <div class="td"><div class="iconCircle"><span class="like">즐겨찾기</span></div></div>
-                    <div class="td"><div class="iconCircle"><span class="analysis">보장분석</span></div></div>
-                    <div class="td"><div class="iconCircle"><span class="agree">동의여부</span></div></div>
+                    <div class="td"><a href="#" class="btnCircle like on"><span>즐겨찾기</span></a></div>
+                    <div class="td"><a href="#" class="btnCircle analysis on"><span>보장분석</span></a></div>
+                    <div class="td"><a href="#" class="btnCircle agree on"><span>동의여부</span></a></div>
                     <div class="td attend"><a href="#" class="btnText sizeMiddle fillGray"><span>출력</span></a></div>
                 </div>
             </div>
             <div class="item">
                 <div class="tr">
-                    <div class="td name"><a href="#">독고영재독고영재</a></div>
+                    <div class="td name"><a href="#">홍길동</a></div>
                     <div class="td gender">남</div>
                     <div class="td birth">1981.05.30</div>
                     <div class="td old">32세</div>
                     <div class="td">11-30</div>
                     <div class="td">D-30</div>
                     <div class="td date">2019.10.14</div>
-                    <div class="td"><div class="iconCircle"><span class="like">즐겨찾기</span></div></div>
-                    <div class="td"><div class="iconCircle"><span class="analysis">보장분석</span></div></div>
-                    <div class="td"><div class="iconCircle"><span class="agree">동의여부</span></div></div>
+                    <div class="td"><a href="#" class="btnCircle like"><span>즐겨찾기</span></a></div>
+                    <div class="td"><a href="#" class="btnCircle analysis"><span>보장분석</span></a></div>
+                    <div class="td"><a href="#" class="btnCircle agree"><span>동의여부</span></a></div>
+                    <div class="td attend"><a href="#" class="btnText sizeMiddle fillGray"><span>출력</span></a></div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="tr">
+                    <div class="td name"><a href="#">김하나</a></div>
+                    <div class="td gender">여</div>
+                    <div class="td birth">1981.05.30</div>
+                    <div class="td old">32세</div>
+                    <div class="td">11-30</div>
+                    <div class="td">D-30</div>
+                    <div class="td date">2019.10.14</div>
+                    <div class="td"><a href="#" class="btnCircle like on"><span>즐겨찾기</span></a></div>
+                    <div class="td"><a href="#" class="btnCircle analysis on"><span>보장분석</span></a></div>
+                    <div class="td"><a href="#" class="btnCircle agree"><span>동의여부</span></a></div>
+                    <div class="td attend"><a href="#" class="btnText sizeMiddle fillGray"><span>출력</span></a></div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="tr">
+                    <div class="td name"><a href="#">선우재덕</a></div>
+                    <div class="td gender">여</div>
+                    <div class="td birth">1981.05.30</div>
+                    <div class="td old">32세</div>
+                    <div class="td">11-30</div>
+                    <div class="td">D-30</div>
+                    <div class="td date">2019.10.14</div>
+                    <div class="td"><a href="#" class="btnCircle like on"><span>즐겨찾기</span></a></div>
+                    <div class="td"><a href="#" class="btnCircle analysis on"><span>보장분석</span></a></div>
+                    <div class="td"><a href="#" class="btnCircle agree"><span>동의여부</span></a></div>
                     <div class="td attend"><a href="#" class="btnText sizeMiddle fillGray"><span>출력</span></a></div>
                 </div>
             </div>
