--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="manyArea">설계사님의　고객은  <strong class="many">163</strong>명 입니다.</div>
             <div class="infoText">오늘은<br>어떤 고객님과 마주 할까요?</div>
-            <div class="memberSerach"><input type="text"><a href="#" class="btnSearch">검색</a></div>
+            <div class="searchArea"><input type="text"><a href="#" class="btnSearch">검색</a></div>
             <div class="sorting">
                 <div class="selectBox">
                     <select name="" id="">
