--- a/html/state.html
+++ b/html/state.html
@@ -9,7 +9,10 @@
     <script src="/asset/js/jquery.mousewheel-3.0.6.min.js"></script>
 </head>
 <body>
-    <div class="">
+    <div class="insuranceList">
+        <div class="titBox">
+            정상계약<span class="count">+3</span>
+        </div>
         <div class="insurance">
             <div class="info">
                 <div class="logo"><img src="" alt=""></div>
@@ -38,6 +41,97 @@
             </div>
         </div>
         <div class="insurance">
+            <div class="info">
+                <div class="logo"><img src="" alt=""></div>
+                <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+                <div class="date"><span class="state">정상</span>2009.07.17~2082.07.17</div>
+            </div>
+            <div class="payment">
+                <ul>
+                    <li class="top">
+                        <span class="th">매월납20년</span>
+                        <span class="td"><strong>1,270,660</strong>원</span>
+                    </li>
+                    <li>
+                        <span class="th">납입횟수</span>
+                        <span class="td">122/240회</span>
+                    </li>
+                    <li>
+                        <span class="th">납입률</span>
+                        <span class="td">51%</span>
+                    </li>
+                    <li>
+                        <span class="th">납입보험료</span>
+                        <span class="td">8,421,660원</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="insuranceList">
+        <div class="titBox">
+            자동차보험<span class="count">+1</span>
+        </div>
+        <div class="insurance">
+            <div class="info">
+                <div class="logo"><img src="" alt=""></div>
+                <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+                <div class="date"><span class="state">정상</span>2009.07.17~2082.07.17</div>
+            </div>
+            <div class="payment">
+                <ul>
+                    <li class="top">
+                        <span class="th">매월납20년</span>
+                        <span class="td"><strong>1,270,660</strong>원</span>
+                    </li>
+                    <li>
+                        <span class="th">납입횟수</span>
+                        <span class="td">122/240회</span>
+                    </li>
+                    <li>
+                        <span class="th">납입률</span>
+                        <span class="td">51%</span>
+                    </li>
+                    <li>
+                        <span class="th">납입보험료</span>
+                        <span class="td">8,421,660원</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>    
+    <div class="insuranceList">
+        <div class="titBox">
+            실효해지<span class="count">+2</span>
+        </div>
+        <div class="insurance disabled">
+            <div class="info">
+                <div class="logo"><img src="" alt=""></div>
+                <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+                <div class="date"><span class="state">정상</span>2009.07.17~2082.07.17</div>
+            </div>
+            <div class="payment">
+                <ul>
+                    <li class="top">
+                        <span class="th">매월납20년</span>
+                        <span class="td"><strong>1,270,660</strong>원</span>
+                    </li>
+                    <li>
+                        <span class="th">납입횟수</span>
+                        <span class="td">122/240회</span>
+                    </li>
+                    <li>
+                        <span class="th">납입률</span>
+                        <span class="td">51%</span>
+                    </li>
+                    <li>
+                        <span class="th">납입보험료</span>
+                        <span class="td">8,421,660원</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="insurance disabled">
             <div class="info">
                 <div class="logo"><img src="" alt=""></div>
                 <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
