--- a/html/guide.html
+++ b/html/guide.html
@@ -11,6 +11,11 @@
     <script src="/asset/js/lib/jquery.nice-select.min.js"></script>
     <script src="/asset/js/lib/jquery.placeholder.min.js"></script>
     <script src="/asset/js/default.js"></script>
+    <style>
+        body{
+            overflow:auto;
+        }
+    </style>
 </head>
 <body>
 <!--form-->
