--- a/html/list.html
+++ b/html/list.html
@@ -12,9 +12,7 @@
     <script src="/asset/js/default.js"></script>
     <script>
         $(function(){
-            $(".contentScroll").mCustomScrollbar({
-                scrollbarPosition:"outside"
-            });
+            $(".contentScroll").mCustomScrollbar();
         })
     </script>
 </head>
