--- a/html/state.html
+++ b/html/state.html
@@ -80,6 +80,37 @@
         <!-- leftArea : e -->
         <!-- contentArea : s -->
         <div class="contentArea">
+            <!-- customerStateInfo : s -->
+            <div class="customerStateInfo">
+                <div class="customer">
+                    <strong>독고영재</strong>고객님<br>
+                    반갑습니다.
+                </div>
+                <div class="contract">
+                    <dl>
+                        <dt>정상계약</dt>
+                        <dd><strong>11</strong>건</dd>
+                    </dl>
+                </div>
+                <div class="pay">
+                    <dl>
+                        <dt>월보험료</dt>
+                        <dd><strong>1,264,530</strong>원</dd>
+                    </dl>
+                </div>
+                <div class="state">
+                    <dl>
+                        <dt>보장현황</dt>
+                        <dd>
+                            <span class="noJoin"><strong>9</strong>미가입</span>
+                            <span class="shortage"><strong>14</strong>부족</span>
+                            <span class="enough"><strong>3</strong>충분</span>
+                        </dd>
+                    </dl>
+                </div>
+            </div>
+            <!-- customerStateInfo : e -->
+            <!-- insuranceList : s -->
             <div class="insuranceList">
                 <div class="titBox">
                     정상계약<span class="count">+3</span>
@@ -139,6 +170,8 @@
                     </div>
                 </div>
             </div>
+            <!-- insuranceList : e -->
+            <!-- insuranceList : s -->
             <div class="insuranceList">
                 <div class="titBox">
                     자동차보험<span class="count">+1</span>
@@ -170,7 +203,9 @@
                         </ul>
                     </div>
                 </div>
-            </div>    
+            </div>  
+            <!-- insuranceList : e -->
+            <!-- insuranceList : s -->  
             <div class="insuranceList">
                 <div class="titBox">
                     실효해지<span class="count">+2</span>
@@ -230,6 +265,7 @@
                     </div>
                 </div>
             </div>
+            <!-- insuranceList : e -->
         </div>
         <!-- contentArea : e -->
     </div>
