--- a/html/state.html
+++ b/html/state.html
@@ -206,7 +206,7 @@
           <!-- insuranceList : s -->
           <div class="insuranceList">
             <div class="titBox">
-            <h3 class="tit">자동차보험</h3><span class="count">+1</span>
+              <h3 class="tit">자동차보험</h3><span class="count">+1</span>
             </div>
             <div class="insurance">
               <div class="info">
@@ -235,19 +235,22 @@
                 </ul>
               </div>
             </div>
+            <div class="insurance noInsurance">
+              <div>가입내역이 없습니다.</div>
+            </div>
           </div>  
           <!-- insuranceList : e -->
 
           <!-- insuranceList : s -->  
           <div class="insuranceList">
             <div class="titBox">
-            <h3 class="tit">실효해지</h3><span class="count">+2</span>
+              <h3 class="tit">실효해지</h3><span class="count">+2</span>
             </div>
             <div class="insurance disabled">
               <div class="info">
                 <div class="logo"><img src="/asset/images/temp/logo_sample01_off.png" alt="한화생명"></div>
                 <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-                <div class="date"><span class="state">정상</span>2009.07.17~2082.07.17</div>
+                <div class="date"><span class="state">실효</span>2009.07.17~2082.07.17</div>
               </div>
               <div class="payment">
                 <ul>
@@ -274,7 +277,7 @@
               <div class="info">
                 <div class="logo"><img src="/asset/images/temp/logo_sample01_off.png" alt="한화생명"></div>
                 <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-                <div class="date"><span class="state">정상</span>2009.07.17~2082.07.17</div>
+                <div class="date"><span class="state">해지</span>2009.07.17~2082.07.17</div>
               </div>
               <div class="payment">
                 <ul>
@@ -299,6 +302,15 @@
             </div>
           </div>
           <!-- insuranceList : e -->
+          
+          <div class="noteBox">
+            <dl>
+              <dt>유의사항</dt>
+              <dd>상기 내용 중 보험료에 대한 분석은 초회보험료를 납입만기까지 계속 납입하는 기준으로 산출한 것으로 중도에 계약이 변경되거나 특약의 납입기간이 
+              상이할 경우 차이가 발생할 수 있습니다. 정확한 내용은 해당 보험회사에 문의해주시기 바랍니다.</dd>
+              <dd>실손형담보의 보험료는 제외된 금액입니다. 실손형의 경우 갱신형으로 되어 있어 초회보험료와 향후 보험료가 상이하여 책정이 불가능 합니다.</dd>            
+            </dl>
+          </div>
         </div>    
         <!-- scrollArea : e -->
       </div>
