고객리스트 고객등록버튼 추가

--- a/html/index.html
+++ b/html/index.html
@@ -344,7 +344,12 @@
                 <div class="td attend"><a href="#" class="btnText sizeMiddle fillGray"><span>출력</span></a></div>
               </div>
             </div>
-          </div>
+            <!-- 고객등록 버튼 : s -->
+            <div class="customerAdd">
+              <a href="#" class="btnCustomerAdd"><span>고객을 등록해 주세요.</span></a>
+            </div>
+            <!-- 고객등록 버튼 : e -->
+          </div>          
         </div>
         <!-- scrollArea : e -->
       </div>
