--- a/html/guide.html
+++ b/html/guide.html
@@ -68,6 +68,12 @@
           <label for="checkbox2_3">보장분석</label>
         </div>
       </li>
+      <li>
+        <div class="checkBoxSet bgType noLabel">
+          <input type="checkbox" id="checkbox2_4">
+          <label for="checkbox2_4"></label>
+        </div>
+      </li>
     </ul>
   </div>
 
@@ -89,6 +95,12 @@
       <div class="radioSet">
         <input type="radio" id="radio3">
         <label for="radio3">보장분석</label>
+      </div>
+    </li>
+    <li>
+      <div class="radioSet noLabel">
+        <input type="radio" id="radio4">
+        <label for="radio4"></label>
       </div>
     </li>
   </ul>
