--- a/html/sub.html
+++ b/html/sub.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>submain</title>
   <link rel="stylesheet" href="/asset/css/style.css">
   <script src="/asset/js/lib/jquery-3.4.1.min.js"></script>
   <script src="/asset/js/lib/jquery.mCustomScrollbar.min.js"></script>
@@ -458,18 +458,98 @@
     <!-- leftArea : e -->
     <!-- contentArea : s -->
     <div class="contentArea">
-      <h2 class="subTitle">고객리스트</h2>
       <!-- scrollArea : s -->
       <div class="contentScroll">
-        12390123091823091823<br>
-        12390123091823091823<br>
-        12390123091823091823<br>12390123091823091823<br>
-        12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>12390123091823091823<br>
+        <div class="submainWrap">
+          <!-- topArea : s -->
+          <div class="topArea">
+            <div class="imgArea"><img src="/asset/images/main/main_top_img.png" alt=""></div>
+            <div class="infoArea">
+              <div class="favorites">즐겨찾기</div>
+              <h2 class="title">
+                <strong>독고영재</strong> 고객님의 보장분석을<br>
+                쉽고 든든하게 알려드리겠습니다.
+              </h2>
+              <div class="text">
+                <span class="bday">1981.05.31</span>
+                <span class="age">32세</span>
+                <button class="alert">상령일</button>
+                <span class="date">11.30</span>
+              </div>
+            </div>
+          </div>
+          <!-- topArea : e -->
+          <div class="moreContent">
 
+            <div class="box box1">
+              <h3 class="title">보험현황</h3>
+              <div class="text">보험료 이렇게 내고 있군요</div>
+              <div class="infoGrid big">
+                <ul>
+                  <li class="title">정상계약</li>
+                  <li class="text"><strong>3</strong>건</li>
+                </ul>
+                <ul>
+                  <li class="title">월납입보험료</li>
+                  <li class="text"><strong>1,270,660</strong>원</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="box box2">
+              <div class="graphArea"></div>
+              <div class="infoGrid right">
+                <ul>
+                  <li class="title">납입완료</li>
+                  <li class="text"><strong>1,270,660</strong>원</li>
+                </ul>
+                <ul>
+                  <li class="title">납입예정</li>
+                  <li class="text"><strong>1,270,660</strong>원</li>
+                </ul>
+                <ul>
+                  <li class="title">총보험료</li>
+                  <li class="text"><strong>1,111,270,660</strong>원</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="box box3">
+              <h3 class="title">고객님<br>보장이 부족합니다.</h3>
+              <div class="text">전체 74% 부족</div>
+              <div class="graphArea"></div>
+              <ul class="infoBox">
+                <li class="all">
+                  <span class="tit">전체보장</span>
+                  <span class="number">35</span>
+                </li>
+                <li class="no">
+                  <span class="tit">미가입</span>
+                  <span class="number">35</span>
+                </li>
+                <li class="lack">
+                  <span class="tit">부족</span>
+                  <span class="number">35</span>
+                </li>
+                <li class="good">
+                  <span class="tit">충분</span>
+                  <span class="number">35</span>
+                </li>
+              </ul>
+              <div class="result">
+                <span>34%</span> 보장이 <span>부족</span>하고<br>
+                40% 보장이 미가입 상태입니다.
+              </div>
+            </div>
+
+
+          </div>
+        </div>
       </div>
       <!-- scrollArea : e -->
     </div>
     <!-- contentArea : e -->
+    <a href="#" class="btnClose"><span>닫기</span></a>
   </div>
 </div>
 
