--- a/html/consulting.html
+++ b/html/consulting.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>submain</title>
+  <title>컨설팅</title>
   <link rel="stylesheet" href="/asset/css/style.css">
   <script src="/asset/js/lib/jquery-3.4.1.min.js"></script>
   <script src="/asset/js/lib/jquery.mCustomScrollbar.min.js"></script>
@@ -14,7 +14,6 @@
     $(function () {
       $(".contentScroll").mCustomScrollbar();
       $(".memberList").mCustomScrollbar();
-      $(".tableScroll").mCustomScrollbar();
     })
   </script>
 </head>
