--- a/html/sub.html
+++ b/html/sub.html
@@ -9,11 +9,140 @@
   <script src="/asset/js/lib/jquery.mousewheel-3.0.6.min.js"></script>
   <script src="/asset/js/lib/jquery.nice-select.min.js"></script>
   <script src="/asset/js/lib/jquery.placeholder.min.js"></script>
+  <script src="/asset/js/lib/core.js"></script>
+  <script src="/asset/js/lib/charts.js"></script>
+  <script src="/asset/js/lib/animated.js"></script>
   <script src="/asset/js/default.js"></script>
   <script>
     $(function () {
       $(".contentScroll").mCustomScrollbar();
       $(".memberList").mCustomScrollbar();
+
+      // Themes begin
+      am4core.useTheme(am4themes_animated);
+      // Themes end
+
+      // Create chart instance
+      var chart1 = am4core.create("chartdiv1", am4charts.RadarChart);
+      // Add data
+      chart1.data = [{
+        "category": "chartdiv1",
+        "value": 80,
+        "full": 100
+      }];
+
+      // Make chart not full circle
+      chart1.startAngle = -90;
+      chart1.endAngle = 270;
+      chart1.innerRadius = am4core.percent(79);
+
+      // Set number format
+      chart1.numberFormatter.numberFormat = "#.#'%'";
+
+      // Create axes
+      var categoryAxis = chart1.yAxes.push(new am4charts.CategoryAxis());
+      categoryAxis.dataFields.category = "category";
+      categoryAxis.renderer.grid.template.location = 0;
+      categoryAxis.renderer.grid.template.strokeOpacity = 0;
+      categoryAxis.renderer.labels.template.disabled = true;
+      categoryAxis.renderer.minGridDistance = 10;
+
+      var valueAxis = chart1.xAxes.push(new am4charts.ValueAxis());
+      valueAxis.renderer.grid.template.strokeOpacity = 0;
+      valueAxis.min = 0;
+      valueAxis.max = 100;
+      valueAxis.strictMinMax = true;
+      valueAxis.renderer.labels.template.disabled = true;
+
+      // Create series
+      var series1 = chart1.series.push(new am4charts.RadarColumnSeries());
+      series1.dataFields.valueX = "full";
+      series1.dataFields.categoryY = "category";
+      series1.clustered = false;
+      series1.columns.template.strokeWidth = 0;
+      series1.columns.template.radarColumn.cornerRadius = 20;
+      series1.fill = am4core.color("#eeeeee");
+
+      var series2 = chart1.series.push(new am4charts.RadarColumnSeries());
+      series2.dataFields.valueX = "value";
+      series2.dataFields.categoryY = "category";
+      series2.clustered = false;
+      series2.columns.template.strokeWidth = 0;
+      series2.columns.template.radarColumn.cornerRadius = 20;
+      series2.fill = am4core.color("#01a7c4");
+
+      $(".counterNumber .count").text(chart1.data[0].value);
+      counterStart();
+
+
+
+      // Create chart instance
+      var chart2 = am4core.create("chartdiv2", am4charts.PieChart);
+      chart2.hiddenState.properties.opacity = 0; // this creates initial fade-in
+
+      chart2.data = [
+        {
+          country: "미가입",
+          value: 260,
+          config: {
+            fill: am4core.color("#f0f3f8"),
+            zIndex:1
+          },
+          configLabel: {
+            fill: am4core.color("#7c838f"),
+            fontSize: "20px",
+            fontWeight: "700"
+          }
+        },
+        {
+          country: "부족",
+          value: 230,
+          config: {
+            fill: am4core.color("#fe5855"),
+            isActive: true,
+            zIndex:2
+          },
+          configLabel: {
+            fill: am4core.color("#ffffff"),
+            fontSize: "20px",
+            fontWeight: "700"
+          }
+        },
+        {
+          country: "충분",
+          value: 200,
+          config: {
+            fill: am4core.color("#b9ece6"),
+            zIndex:1
+          },
+          configLabel: {
+            fill: am4core.color("#01a7c4"),
+            fontSize: "20px",
+            fontWeight: "700"
+          }
+        }
+      ];
+
+      var series = chart2.series.push(new am4charts.PieSeries());
+      series.dataFields.value = "value";
+      series.slices.template.tooltipText = "";
+      series.ticks.template.disabled = true;
+      series.alignLabels = false;
+      series.labels.template.text = "{value.percent.formatNumber('#.0')}%";
+      series.labels.template.radius = am4core.percent(-40);
+      series.hiddenState.properties.endAngle = -120;
+      series.slices.template.states.getKey("hover").properties.scale = 1;
+      series.slices.template.states.getKey("active").properties.scale = 1.15;
+      series.slices.template.states.getKey("active").properties.shiftRadius  = 0;
+      series.slices.template.configField = "config";
+      series.labels.template.configField = "configLabel";
+      // series.slices.template.adapter.add("fill", (fill, target) => {
+      //   return am4core.color(myColors[target.dataItem.index]);
+      // });
+      // series.labels.template.adapter.add("fill", (fill, target) => {
+      //   return am4core.color(myLabelColors[target.dataItem.index]);
+      // });
+
     })
   </script>
 </head>
@@ -473,31 +602,43 @@
               <div class="text">
                 <span class="bday">1981.05.31</span>
                 <span class="age">32세</span>
-                <button class="alert">상령일</button>
+                <button class="alert" onclick="layerPopBoxOpen('popupInfo1')">상령일</button>
                 <span class="date">11.30</span>
               </div>
+            </div>
+            <div class="layerPopBox" id="popupInfo1">
+              <div class="layerPopContent">
+                <div class="iconTitle">상령일이란</div>
+                <div class="text">
+                  보험회사에서 정하는 보험나이로 생년월일에서 6개월 경과시점이 상령일이 되며,<br>
+                  보험연령 증가에 따라 상령일 이후 보험료가 증가될수 있습니다.
+                </div>
+              </div>
+              <button class="btnClose white" onclick="layerPopBoxClose('popupInfo1')"><span>닫기</span></button>
             </div>
           </div>
           <!-- topArea : e -->
           <div class="moreContent">
-
             <div class="box box1">
               <h3 class="title">보험현황</h3>
               <div class="text">보험료 이렇게 내고 있군요</div>
               <div class="infoGrid big">
                 <ul>
-                  <li class="title">정상계약</li>
-                  <li class="text"><strong>3</strong>건</li>
+                  <li class="title black">정상계약</li>
+                  <li class="text skyblue"><strong>3</strong>건</li>
                 </ul>
                 <ul>
-                  <li class="title">월납입보험료</li>
+                  <li class="title black">월납입보험료</li>
                   <li class="text"><strong>1,270,660</strong>원</li>
                 </ul>
               </div>
             </div>
 
             <div class="box box2">
-              <div class="graphArea"></div>
+              <div class="graphArea">
+                <div id="chartdiv1"></div>
+                <div class="counterNumber"><strong class="count"></strong>%</div>
+              </div>
               <div class="infoGrid right">
                 <ul>
                   <li class="title">납입완료</li>
@@ -517,7 +658,9 @@
             <div class="box box3">
               <h3 class="title">고객님<br>보장이 부족합니다.</h3>
               <div class="text">전체 74% 부족</div>
-              <div class="graphArea"></div>
+              <div class="graphArea">
+                <div id="chartdiv2"></div>
+              </div>
               <ul class="infoBox">
                 <li class="all">
                   <span class="tit">전체보장</span>
