팝업 : 권장금액보장군설정

--- a/html/팝업-보장상세내역.html
+++ b/html/팝업-보장상세내역.html
@@ -16,7 +16,7 @@
     })
   </script>
 </head>
-<body>
+<body style="background: rgba(0,0,0,0.5);">
 <!-- layerPopWrap : s -->
 <div class="layerPopWrap popInsuranceDetail">
   <div class="layerPopHeader">
