--- a/html/팝업-권장금액보장군설정.html
+++ b/html/팝업-권장금액보장군설정.html
@@ -10,49 +10,230 @@
   <script src="/asset/js/lib/jquery.nice-select.min.js"></script>
   <script src="/asset/js/lib/jquery.placeholder.min.js"></script>
   <script src="/asset/js/default.js"></script>
-  
+  <script>
+    $(function () {
+      $(".tableScroll").mCustomScrollbar();
+    })
+  </script>
 </head>
-<body>
+<body style="background: rgba(0,0,0,0.5);">
 <!-- layerPopWrap(권장금액,보장군 설정) : s -->
-<div class="layerPopWrap">
+<div class="layerPopWrap popSecuritySet">
   <div class="layerPopHeader">
-    <h2>권장금액보장군 설정</h2>
+    <h2>권장금액<span class="dot">&#46</span>보장군 설정</h2>
   </div>
   <div class="layerPopContent">
-    <div>
-      <div class="tableScroll"> 
-        <table class="basicType">
-          <colgroup>
-            <col style="width:22%">
-            <col style="width:22%">
-            <col style="width:auto">
-            <col style="width:12%">
-            <col style="width:26%">
-          </colgroup>
-          <thead>
-            <tr>
-              <th>선택</th>
-              <th>보장명</th>
-              <th>보장분류</th>
-              <th>권장금액(만원)</th>
-              <th>설정금액(만원)</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th></th>
-              <th>치아,화상,골절</th>
-              <td>질병 간병인 지원 입원일당</td>
-              <td class="alignC">100,000</td>
-              <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="btnArea">          
-        <a href="#" class="btnText"><span>설정 초기화</span></a>
-        <a href="#" class="btnText fillRed"><span>저징</span></a>
-      </div>
+    <table class="basicType">
+      <colgroup>
+        <col style="width:9%">
+        <col style="width:20%">
+        <col style="width:auto">
+        <col style="width:21%">
+        <col style="width:21%">
+      </colgroup>
+      <thead>
+        <tr>
+          <th><span class="select">선택</span></th>
+          <th>보장명</th>
+          <th>보장분류</th>
+          <th>권장금액(만원)</th>
+          <th>설정금액(만원)</th>
+        </tr>
+      </thead>
+    </table>
+    <div class="tableScroll"> 
+      <table class="basicType">
+        <colgroup>
+          <col style="width:9%">
+          <col style="width:20%">
+          <col style="width:auto">
+          <col style="width:21%">
+          <col style="width:21%">
+        </colgroup>
+        <thead>
+          <tr>
+            <th>선택</th>
+            <th>보장명</th>
+            <th>보장분류</th>
+            <th>권장금액(만원)</th>
+            <th>설정금액(만원)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="alignC">
+              <div class="checkBoxSet noLabel">
+                <input type="checkbox" id="checkbox1" checked>
+                <label for="checkbox1"></label>
+              </div>
+            </td>
+            <th>치아,화상,골절</th>
+            <td>질병 간병인 지원 입원일당</td>
+            <td class="alignC">100,000</td>
+            <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
+          </tr>
+          <tr>
+            <td class="alignC">
+              <div class="checkBoxSet noLabel">
+                <input type="checkbox" id="checkbox2">
+                <label for="checkbox2"></label>
+              </div>
+            </td>
+            <th>사망</th>
+            <td>상해 간병인 지원 입원일당</td>
+            <td class="alignC">100,000</td>
+            <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
+          </tr>
+          <tr>
+            <td class="alignC">
+              <div class="checkBoxSet noLabel">
+                <input type="checkbox" id="checkbox3">
+                <label for="checkbox3"></label>
+              </div>
+            </td>
+            <th>후유장해</th>
+            <td>상해사망</td>
+            <td class="alignC">100,000</td>
+            <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
+          </tr>
+          <tr>
+            <td class="alignC">
+              <div class="checkBoxSet noLabel">
+                <input type="checkbox" id="checkbox4">
+                <label for="checkbox4"></label>
+              </div>
+            </td>
+            <th>치아,화상,골절</th>
+            <td>질병 간병인 지원 입원일당</td>
+            <td class="alignC">100,000</td>
+            <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
+          </tr>
+          <tr>
+            <td class="alignC">
+              <div class="checkBoxSet noLabel">
+                <input type="checkbox" id="checkbox5" checked>
+                <label for="checkbox5"></label>
+              </div>
+            </td>
+            <th>치아,화상,골절</th>
+            <td>질병 간병인 지원 입원일당</td>
+            <td class="alignC">100,000</td>
+            <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
+          </tr>
+          <tr>
+            <td class="alignC">
+              <div class="checkBoxSet noLabel">
+                <input type="checkbox" id="checkbox6">
+                <label for="checkbox6"></label>
+              </div>
+            </td>
+            <th>사망</th>
+            <td>상해 간병인 지원 입원일당</td>
+            <td class="alignC">100,000</td>
+            <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
+          </tr>
+          <tr>
+            <td class="alignC">
+              <div class="checkBoxSet noLabel">
+                <input type="checkbox" id="checkbox7">
+                <label for="checkbox7"></label>
+              </div>
+            </td>
+            <th>후유장해</th>
+            <td>상해사망</td>
+            <td class="alignC">100,000</td>
+            <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
+          </tr>
+          <tr>
+            <td class="alignC">
+              <div class="checkBoxSet noLabel">
+                <input type="checkbox" id="checkbox8">
+                <label for="checkbox8"></label>
+              </div>
+            </td>
+            <th>치아,화상,골절</th>
+            <td>질병 간병인 지원 입원일당</td>
+            <td class="alignC">100,000</td>
+            <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
+          </tr>
+          <tr>
+            <td class="alignC">
+              <div class="checkBoxSet noLabel">
+                <input type="checkbox" id="checkbox9" checked>
+                <label for="checkbox9"></label>
+              </div>
+            </td>
+            <th>치아,화상,골절</th>
+            <td>질병 간병인 지원 입원일당</td>
+            <td class="alignC">100,000</td>
+            <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
+          </tr>
+          <tr>
+            <td class="alignC">
+              <div class="checkBoxSet noLabel">
+                <input type="checkbox" id="checkbox10">
+                <label for="checkbox10"></label>
+              </div>
+            </td>
+            <th>사망</th>
+            <td>상해 간병인 지원 입원일당</td>
+            <td class="alignC">100,000</td>
+            <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
+          </tr>
+          <tr>
+            <td class="alignC">
+              <div class="checkBoxSet noLabel">
+                <input type="checkbox" id="checkbox11">
+                <label for="checkbox11"></label>
+              </div>
+            </td>
+            <th>후유장해</th>
+            <td>상해사망</td>
+            <td class="alignC">100,000</td>
+            <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
+          </tr>
+          <tr>
+            <td class="alignC">
+              <div class="checkBoxSet noLabel">
+                <input type="checkbox" id="checkbox12">
+                <label for="checkbox12"></label>
+              </div>
+            </td>
+            <th>치아,화상,골절</th>
+            <td>질병 간병인 지원 입원일당</td>
+            <td class="alignC">100,000</td>
+            <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
+          </tr>
+          <tr>
+            <td class="alignC">
+              <div class="checkBoxSet noLabel">
+                <input type="checkbox" id="checkbox11">
+                <label for="checkbox11"></label>
+              </div>
+            </td>
+            <th>후유장해</th>
+            <td>상해사망</td>
+            <td class="alignC">100,000</td>
+            <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
+          </tr>
+          <tr>
+            <td class="alignC">
+              <div class="checkBoxSet noLabel">
+                <input type="checkbox" id="checkbox12">
+                <label for="checkbox12"></label>
+              </div>
+            </td>
+            <th>치아,화상,골절</th>
+            <td>질병 간병인 지원 입원일당</td>
+            <td class="alignC">100,000</td>
+            <td class="alignC"><div class="inputSet right"><input type="text" data-value="100,000" value="100,000" style="width: 95px;"></div></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="btnArea">          
+      <a href="#" class="btnText"><span>설정 초기화</span></a>
+      <a href="#" class="btnText fillRed"><span>저장</span></a>
     </div>
   </div>
   <a href="#" class="btnClose white"><span>닫기</span></a>
