팝업 가계약 조회 리스트

--- a/html/팝업-권장금액보장군설정.html
+++ b/html/팝업-권장금액보장군설정.html
@@ -17,7 +17,7 @@
   </script>
 </head>
 <body style="background: rgba(0,0,0,0.5);">
-<!-- layerPopWrap(권장금액,보장군 설정) : s -->
+<!-- layerPopWrap: s -->
 <div class="layerPopWrap popSecuritySet">
   <div class="layerPopHeader">
     <h2>권장금액<span class="dot">&#46</span>보장군 설정</h2>
