--- a/html/팝업-가계약 추가.html
+++ b/html/팝업-가계약 추가.html
@@ -18,7 +18,7 @@
 </head>
 <body style="background:rgba(0,0,0,0.5)">
 <!-- layerPopWrap : s -->
-<div class="layerPopWrap popSmall">
+<div class="layerPopWrap popAlert">
   <div class="layerPopHeader">
     <h2>컨설팅</h2>
   </div>
