--- a/html/팝업-고객등록동의문자발송.html
+++ b/html/팝업-고객등록동의문자발송.html
@@ -18,7 +18,7 @@
 </head>
 <body style="background:rgba(0,0,0,0.5)">
 <!-- layerPopWrap : s -->
-<div class="layerPopWrap popSmall">
+<div class="layerPopWrap popAlert">
   <div class="layerPopHeader">
     <h2>고객등록<span class="dot">&#46</span>동의 문자 발송</h2>
   </div>
