--- a/html/팝업-가계약조회리스트.html
+++ b/html/팝업-가계약조회리스트.html
@@ -27,31 +27,79 @@
       <ul class="sortingList">
         <li>
           <div class="radioSet">
-            <input type="radio" id="radio1">
+            <input type="radio" id="radio1" name="searchCondition">
             <label for="radio1">당일</label>
           </div>
         </li>
         <li>
           <div class="radioSet">
-            <input type="radio" id="radio2">
+            <input type="radio" id="radio2" name="searchCondition">
             <label for="radio2">1주일</label>
           </div>
         </li>
         <li>
           <div class="radioSet">
-            <input type="radio" id="radio3">
+            <input type="radio" id="radio3" name="searchCondition">
             <label for="radio3">1개월</label>
           </div>
         </li>
         <li>
-          <div class="radioSet noLabel">
-            <input type="radio" id="radio4">
+          <div class="radioSet">
+            <input type="radio" id="radio4" name="searchCondition">
             <label for="radio4">당월</label>
           </div>
         </li>
       </ul>
-      <div>2019.09.25 ~2019.10.25</div>
+      <div class="date">2019.09.25 ~2019.10.25</div>
     </div>
+     <!-- insuranceList : s -->
+     <div class="insuranceList">
+      <div href="#" class="insurance">
+        <div class="info">
+          <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+          <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+        </div>
+        <div class="payment">
+          <ul>
+            <li class="top">
+              <span class="th">보험료</span>
+              <span class="td"><strong>1,000,000</strong>원</span>
+            </li>
+            <li>
+              <span class="th">납입만기</span>
+              <span class="td">20년(100세)</span>
+            </li>
+            <li>
+              <span class="th">청약일</span>
+              <span class="td">2019.10.14</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div href="#" class="insurance">
+          <div class="info">
+            <div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+            <div class="date"><span class="state">심사대상</span>106200573201910141</div>
+          </div>
+          <div class="payment">
+            <ul>
+              <li class="top">
+                <span class="th">보험료</span>
+                <span class="td"><strong>1,000,000</strong>원</span>
+              </li>
+              <li>
+                <span class="th">납입만기</span>
+                <span class="td">20년(100세)</span>
+              </li>
+              <li>
+                <span class="th">청약일</span>
+                <span class="td">2019.10.14</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </div>
+    <!-- insuranceList : e -->
     <div class="btnArea">          
       <a href="#" class="btnText fillRed"><span>확인</span></a>
     </div>
