--- a/html/sub.html
+++ b/html/sub.html
@@ -21,6 +21,8 @@
       // Themes begin
       am4core.useTheme(am4themes_animated);
       // Themes end
+      //amchart 라이센스
+      am4core.options.commercialLicense = true;
 
       // Create chart instance
       var chart1 = am4core.create("chartdiv1", am4charts.RadarChart);
@@ -91,7 +93,7 @@
           configLabel: {
             fill: am4core.color("#7c838f"),
             fontSize: "20px",
-            fontWeight: "700"
+            fontWeight: "600"
           }
         },
         {
@@ -105,7 +107,7 @@
           configLabel: {
             fill: am4core.color("#ffffff"),
             fontSize: "20px",
-            fontWeight: "700"
+            fontWeight: "600"
           }
         },
         {
@@ -118,7 +120,7 @@
           configLabel: {
             fill: am4core.color("#01a7c4"),
             fontSize: "20px",
-            fontWeight: "700"
+            fontWeight: "600"
           }
         }
       ];
